# V-OS

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
headers/private/kernel/: lock.h
headers/private/kernel/util/: AutoLock.h
src/system/: CMakeLists.txt
src/system/libroot/: CMakeLists.txt
